# MusicGenerationWebService

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  Pipfile  README.md  config.py  dev.sh  mgws.py  mgws.sublime-workspace  prod.sh  pyproject.toml  tests.py
app/: __init__.py
app/algorythm/: music_generation.py
app/auth/: __init__.py  routes.py
app/errors/: __init__.py  handlers.py
app/main/: __init__.py  routes.py
app/static/css/: styles.css
app/static/js/: script.js
app/static/templates/: base.html  index.html
app/templates/: base.html
app/templates/auth/: login.html
app/templates/errors/: 500.html
client/: README.md  jsdoc.conf.json  package-lock.json  package.json
client/public/: index.html
client/src/: App.css  App.js  index.js
client/src/Components/: ABCPlayer.js  BottomBar.js  GenrePaper.js  GenresGrid.js  Title.js  TopBar.js
docs/JsDoc/: ABCPlayer.html  App.html  App.js.html  Components_ABCPlayer.js.html  Components_BottomBar.js.html  Components_GenrePaper.js.html  Components_GenresGrid.js.html  Components_Title.js.html  Components_TopBar.js.html  GenrePaper.html  GenresGrid.html  Title.html  TopBar.html  index.html  module.exports.html
docs/PythonDoc/source/: conf.py  index.rst
server/: README.md  __init__.py
server/algorythm/: __init__.py  music_generation.py  routes.py
server/errors/: __init__.py  handlers.py
server/main/: __init__.py  routes.py
server/static/js/: script.js
server/static/react/: asset-manifest.json  index.html  manifest.json  precache-manifest.bd686dab9abaedb83859ee7f67fb8da6.js  (+2 more)
(+24 files in other folders)
